basic form html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conditional Statements</title>
+  <title>Landing Page</title>
 </head>
 
 <body>
   
-  <h1 style="text-align:center;">Open the Console to See the Magic ✨! </h1>
+  <h1>Welcome</h1>
+  <h2>What's on your mind?</h2>
+  <!-- basic form from w3 schools and mdn -->
+  <form> 
+    <label for="username">username:</label><br>
+    <input type="text" id="username" name="username"><br>
+    <label for="title">blog post title:</label><br>
+    <input type="text" id="title" name="title"><br>
+    <label for="content">blog post content:</label><br>
+    <input type="text" id="content" name="content">
+    <div class="submit-btn">
+      <input type="submit" value="Submit" />
+    </div>
+  </form>
 
-  <script src="script.js"></script>
+  <script src="assets/js/form.js"></script>
 
 </body>
 </html>
