--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/form.css" />
   <title>Landing Page</title>
 </head>
 
-<body>
+<body id="form-page">
 
-  <h1>Welcome</h1>
-  <h2>What's on your mind?</h2>
+  <div class="container">
+  <div id="welcome-container">
+    <h1 id="welcome-title1">Welcome</h1>
+    <h2 id="welcome-title2">What's on your mind?</h2>
+  </div>
 
   <form>
     <div class="input-group">
@@ -29,6 +33,7 @@
       <button id="submitEL" type="button">Submit</button>
     </div>
   </form>
+</div>
 
   <script src="assets/js/form.js"></script>
 
