submit button registers a click

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2 id="welcome-title2">What's on your mind?</h2>
   </div>
 
-  <form>
+  <form id="blogForm">
     <div class="input-group">
       <label for="username">username:</label><br>
       <input type="text" id="username" name="username" placeholder="username"><br>
