--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Window Object</title>
+  <link rel="stylesheet" href="assets/css/blog.css"/>
+  <title>Blog</title>
 </head>
 
 <body>
-  <h1 style="text-align:center;">Open the Console to See the Magic ✨! </h1>
-  <script src= "script.js"></script>
+  <h1 style="text-align:center;">Dynamically Create Things </h1>
+  <script src= "assets/js/blog.js"></script>
 </body>
 </html>
