--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <form id="blogForm">
     <div class="input-group">
       <label for="username">username:</label><br>
-      <input type="text" id="username" name="username" placeholder="username"><br>
+      <input type="text" id="username" name="username"><br>
     </div>
     <div class="input-group">
       <label for="title">blog post title:</label><br>
-      <input type="text" id="title" name="title" placeholder="blog title goes here"><br>
+      <input type="text" id="title" name="title"><br>
     </div>
     <div class="input-group">
       <label for="blogContent">blog post content:</label><br>
-      <input type="text" id="blogContent" name="blogContent" placeholder="what's on your mind">
+      <input type="text" id="blogContent" name="blogContent">
     </div>
     <div class="submit-btn">
       <button id="submitEL" type="button">Submit</button>
