currently saves/appends chaoticallly, need to add styling

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       <button id="submitEL" type="button">Submit</button>
     </div>
   </form>
+
+  <!-- <div class="dark-mode">
+    <button id="darkmode-index" type="button">Dark Mode</button>
+  </div> -->
 </div>
 
   <script src="assets/js/form.js"></script>
