--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 
 <body>
-  <h1 style="text-align:center;">Dynamically Create Things </h1>
+  <h1 style="text-align:center;">My Blog</h1>
   <script src= "assets/js/blog.js"></script>
 </body>
 </html>
