dark and light working on both pages

--- a/blog.html
+++ b/blog.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="assets/css/blog.css"/>
   <title>Blog</title>
 </head>
+<button type="button" id="darkmodeToggleBlog">Dark Mode/Light Mode</button>
 
 
 
-<body>
+
+<body class="light" id="containerBlog">
   <h1 style="text-align:center;">My Blog</h1>
   <script src= "assets/js/blog.js"></script>
+  
 </body>
 </html>
