--- a/index.html
+++ b/index.html
@@ -8,38 +8,42 @@
   <title>Landing Page</title>
 </head>
 
-<body id="form-page">
+<body class="light" id="form-page">
 
   <div class="container">
-  <div id="welcome-container">
-    <h1 id="welcome-title1">Welcome</h1>
-    <h2 id="welcome-title2">What's on your mind?</h2>
+
+    <div id="left-container">
+      <div id="welcome-container" class="circle">
+        <h1 id="welcome-title1">Welcome</h1>
+        <h2 id="welcome-title2">What's on your mind?</h2>
+      </div>
+
+    </div>
+
+    <div id="right-container">
+      <button type="button" id="darkmodeToggle">Dark Mode/Light Mode</button>
+      <form id="blogForm">
+        <div class="input-group">
+          <label for="username">username:</label><br>
+          <input type="text" id="username" name="username" class="input"><br>
+        </div>
+        <div class="input-group">
+          <label for="title">blog post title:</label><br>
+          <input type="text" id="title" name="title" class="input"><br>
+        </div>
+        <div class="input-group">
+          <label for="blogContent">blog post content:</label><br>
+          <textarea id="blogContent" name="blogContent" rows="10" class="input"></textarea>
+        </div>
+        <div class="submit-btn">
+          <button id="submitEL" type="button">Submit</button>
+        </div>
+      </form>
+    </div>
   </div>
 
-  <form id="blogForm">
-    <div class="input-group">
-      <label for="username">username:</label><br>
-      <input type="text" id="username" name="username"><br>
-    </div>
-    <div class="input-group">
-      <label for="title">blog post title:</label><br>
-      <input type="text" id="title" name="title"><br>
-    </div>
-    <div class="input-group">
-      <label for="blogContent">blog post content:</label><br>
-      <input type="text" id="blogContent" name="blogContent">
-    </div>
-    <div class="submit-btn">
-      <button id="submitEL" type="button">Submit</button>
-    </div>
-  </form>
-
-  <!-- <div class="dark-mode">
-    <button id="darkmode-index" type="button">Dark Mode</button>
-  </div> -->
-</div>
-
   <script src="assets/js/form.js"></script>
+  <script src="assets/js/logic.js"></script>
 
 </body>
 
