--- a/blog.html
+++ b/blog.html
@@ -4,17 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/blog.css"/>
+  <link rel="stylesheet" href="assets/css/blog.css" />
   <title>Blog</title>
 </head>
-<button type="button" id="darkmodeToggleBlog">Dark Mode/Light Mode</button>
-
-
-
-
 <body class="light" id="containerBlog">
-  <h1 style="text-align:center;">My Blog</h1>
-  <script src= "assets/js/blog.js"></script>
-  
+  <button type="button" id="darkmodeToggleBlog">Dark Mode/Light Mode</button>
+  <h1 id="myBlog">My Blog</h1>
+  <script src="assets/js/blog.js"></script>
 </body>
+
 </html>
