--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     </div>
   </div>
 
+  <div>
+    <footer id="portfolio"><a href="https://deepblueseas.github.io/professional-porfolio/">visit my portfolio</a></footer> 
+  </div>
+
   <script src="assets/js/form.js"></script>
   <script src="assets/js/logic.js"></script>
 
